# LyricsPy

./: .gitignore  README.md  pyproject.toml  setup.py
lyricspy/: __init__.py
lyricspy/aio/: __init__.py
lyricspy/backends/: __init__.py  letras.py  musixmatch.py
