[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LyricsPy"
dynamic = ["version"]
description = "search lyrics on musixmatch.com"
license = "MIT"
authors = [{ name = "Amano LLC", email = "contact@amanoteam.com" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx", "beautifulsoup4"]

[tool.hatch.version]
path = "lyricspy/__init__.py"

[project.urls]
homepage = "https://github.com/AmanoTeam/LyricsPy"
