[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LyricsPy"
dynamic = ["version"]
description = "search lyrics on musixmatch.com"
license = "MIT"
authors = [{ name = "Amano LLC", email = "contact@amanoteam.com" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx[http2]", "beautifulsoup4"]

[tool.hatch.version]
path = "lyricspy/__init__.py"

[project.urls]
homepage = "https://github.com/AmanoTeam/LyricsPy"

[tool.ruff]
line-length = 99
target-version = "py39"
preview = true

[tool.ruff.lint]
select = [
    "FURB", # refurb
    "I",    # isort
    "E",    # pycodestyle: error
    "W",    # pycodestyle: warning
    "UP",   # pyupgrade
    "F",    # pyflakes
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "N",    # pep8-naming
    "RUF",  # ruff
    "G",    # flake8-logging-format
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "FA",   # flake8-future-annotations
    "PL",   # pylint
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "E203",
    "PERF203",
    "PLR09",
    "PLR2004",
    "PLR1702",
    "PLW1514",
    "PLW2901",
    "PLW0603",
]
